--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
+    "postprocessing": "^6.36.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.1",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "three-rounded-box": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
